# rocketrosti

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  mypy.ini  pyproject.toml  run_backend.sh  run_frontend.sh
assets/: config.defaults.yaml  prompt.yaml
data/source_documents/: Culture_of_Switzerland.txt  Languages_of_Switzerland.txt  Potato.txt  Rösti.txt  Röstigraben.txt  Swiss_cuisine.txt  Swiss_people.txt  Switzerland.txt
rrosti/chat/: chat_session.py
rrosti/chat/state_machine/: ast.py  execution.py  interpolable.py  parsing.py
rrosti/frontend/: client.py
rrosti/frontend/static/css/: style.css
rrosti/frontend/static/js/: Answer.js  Disclaimer.js  Question.js  WebsocketClient.js
rrosti/frontend/templates/: index.html
rrosti/llm_api/: openai_api.py  openai_api_direct.py  rate_limiter.py
rrosti/query/logging/: __init__.py  query_logging.py
rrosti/servers/: serve_data_retrieval_ws.py  websocket_query_server.py
rrosti/snippets/: _page.py  parsed_document.py  snippet_windows.py
rrosti/tools/: text_to_document.py
rrosti/utils/: config.py  misc.py  token_count.py
tests/: testing_utils.py
tests/chat/state_machine/: test_execution.py  test_parsing.py
tests/llm_api/: test_openai_api.py
tests/query/logging/: test_query_logging.py
tests/servers/: test_websocket_query_server.py
tests/utils/: test_config.py
